--- a/WebAplicationProduct/WebAplicationProduct/Views/Fabricante/Index.cshtml
+++ b/WebAplicationProduct/WebAplicationProduct/Views/Fabricante/Index.cshtml
@@ -8,7 +8,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Adicionar</a>
+    <a asp-action="Create" class="btn btn-dark">Criar</a>
 </p>
 <table class="table">
     <thead>
@@ -26,9 +26,9 @@
                 @Html.DisplayFor(modelItem => item.Nome)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.FabricanteID">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.FabricanteID">Detalhes</a> |
-                <a asp-action="Delete" asp-route-id="@item.FabricanteID">Excluir</a>
+                <a asp-action="Edit" asp-route-id="@item.FabricanteID" class="btn btn-dark">Edit </a> |
+                <a asp-action="Details" asp-route-id="@item.FabricanteID" class="btn btn-dark">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.FabricanteID" class="btn btn-dark">Delete</a>
             </td>
         </tr>
 }
